--- a/TPN.html
+++ b/TPN.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="navigate">
             <a href="#about" class="navbtn">About our school</a>
-            <a href="#detail" class="navbtn">More informetion</a>
+            <a href="#detail" class="navbtn">More information</a>
             <a href="#schoolweb" class="navbtn">Official website</a>
         </div>
     </nav>
