--- a/TPN.html
+++ b/TPN.html
@@ -19,17 +19,19 @@
         <h1 id="about-header">Triamudomsuksa Pattanakarn Nonthaburi</h1>
         <div id="about" class="container">
             <div id="img">
-                <img src="tpn.jpg" alt="image" id="my-img">
+                <img src="src/tpn.jpg" alt="image" id="my-img">
             </div> 
             <div id="article">
+                <img src="src/tpn-logo.png" alt="logo" id="my-logo">
                 <h1 id="name">T.P.N</h1>
                 <p class="txt">คำขวัญ : บุคคลจะล่วงทุกข์ได้เพราะความเพียร</p>
-                <p class="txt">วิสัยทัศน์ : บุคคลจะล่วงทุกข์ได้เพราะความเพียร</p>
-                <p class="txt">อัตลักษณ์ : วิชาการ</p>
-                <p class="txt">บุคคลจะล่วงทุกข์ได้เพราะความเพียร</p>
-                <p class="txt">บุคคลจะล่วงทุกข์ได้เพราะความเพียร</p>
-                <p class="txt">บุคคลจะล่วงทุกข์ได้เพราะความเพียร</p>
-                <p class="txt"> &#x1F4CC;98 10 โยธาธิการ นนทบุรี 2025 ตำบล บางกร่าง อำเภอเมืองนนทบุรี นนทบุรี 11000</p>
+                <p class="txt">อัตลักษณ์ : วิชาการเด่น เน้นคุณธรรม</p>
+                <a href="https://www.google.com/maps/place/%E0%B9%82%E0%B8%A3%E0%B8%87%E0%B9%80%E0%B8%A3%E0%B8%B5%E
+                0%B8%A2%E0%B8%99%E0%B9%80%E0%B8%95%E0%B8%A3%E0%B8%B5%E0%B8%A2%E0%B8%A1%E0%B8%AD%E0%B8%B8%E0%B8%94%E
+                0%B8%A1%E0%B8%A8%E0%B8%B6%E0%B8%81%E0%B8%A9%E0%B8%B2%E0%B8%9E%E0%B8%B1%E0%B8%92%E0%B8%99%E0%B8%B2%E
+                0%B8%81%E0%B8%B2%E0%B8%A3+%E0%B8%99%E0%B8%99%E0%B8%97%E0%B8%9A%E0%B8%B8%E0%B8%A3%E0%B8%B5/@13.84789
+                43,100.4412898,17z/data=!3m1!4b1!4m6!3m5!1s0x30e29af9aef82271:0x776899f3916c33b2!8m2!3d13.8478943!4
+                d100.4434785!16s%2Fg%2F121rcvbs" id="location"><p class="txt"> &#x1F4CC;98 10 โยธาธิการ นนทบุรี 2025 ตำบล บางกร่าง อำเภอเมืองนนทบุรี นนทบุรี 11000</p></a>
             </div>
         </div>
         <h1 id="detail-header">Find more details</h1>
