--- a/TPN.html
+++ b/TPN.html
@@ -16,28 +16,47 @@
         </div>
     </nav>
     <section>
-        <h1 id="about-header">Triamudomsuksa Pattanakarn Nonthaburi</h1>
+        <h1 id="about-header" class="header">Triamudomsuksa Pattanakarn Nonthaburi</h1>
         <div id="about" class="container">
-            <div id="img">
-                <img src="src/tpn.jpg" alt="image" id="my-img">
+            <div class="img">
+                <img src="src/tpn.jpg" alt="image" class="side-img">
             </div> 
-            <div id="article">
+            <div class="article">
                 <img src="src/tpn-logo.png" alt="logo" id="my-logo">
-                <h1 id="name">T.P.N</h1>
+                <h1 class="title">T.P.N</h1>
                 <p class="txt">คำขวัญ : บุคคลจะล่วงทุกข์ได้เพราะความเพียร</p>
                 <p class="txt">อัตลักษณ์ : วิชาการเด่น เน้นคุณธรรม</p>
-                <a href="https://www.google.com/maps/place/%E0%B9%82%E0%B8%A3%E0%B8%87%E0%B9%80%E0%B8%A3%E0%B8%B5%E
-                0%B8%A2%E0%B8%99%E0%B9%80%E0%B8%95%E0%B8%A3%E0%B8%B5%E0%B8%A2%E0%B8%A1%E0%B8%AD%E0%B8%B8%E0%B8%94%E
-                0%B8%A1%E0%B8%A8%E0%B8%B6%E0%B8%81%E0%B8%A9%E0%B8%B2%E0%B8%9E%E0%B8%B1%E0%B8%92%E0%B8%99%E0%B8%B2%E
-                0%B8%81%E0%B8%B2%E0%B8%A3+%E0%B8%99%E0%B8%99%E0%B8%97%E0%B8%9A%E0%B8%B8%E0%B8%A3%E0%B8%B5/@13.84789
-                43,100.4412898,17z/data=!3m1!4b1!4m6!3m5!1s0x30e29af9aef82271:0x776899f3916c33b2!8m2!3d13.8478943!4
-                d100.4434785!16s%2Fg%2F121rcvbs" id="location"><p class="txt"> &#x1F4CC;98 10 โยธาธิการ นนทบุรี 2025 ตำบล บางกร่าง อำเภอเมืองนนทบุรี นนทบุรี 11000</p></a>
+                <a href="https://www.google.com/maps/place/98+10+%E0%B9%82%E0%B8%A2%E0%B8%98%E0%B8%B2%E0%B8%98%E0%B8
+                %B4%E0%B8%81%E0%B8%B2%E0%B8%A3+%E0%B8%99%E0%B8%99%E0%B8%97%E0%B8%9A%E0%B8%B8%E0%B8%A3%E0%B8%B5+2025+
+                %E0%B8%95%E0%B8%B3%E0%B8%9A%E0%B8%A5+%E0%B8%9A%E0%B8%B2%E0%B8%87%E0%B8%81%E0%B8%A3%E0%B9%88%E0%B8%B2
+                %E0%B8%87+%E0%B8%AD%E0%B8%B3%E0%B9%80%E0%B8%A0%E0%B8%AD%E0%B9%80%E0%B8%A1%E0%B8%B7%E0%B8%AD%E0%B8%87
+                %E0%B8%99%E0%B8%99%E0%B8%97%E0%B8%9A%E0%B8%B8%E0%B8%A3%E0%B8%B5+%E0%B8%99%E0%B8%99%E0%B8%97%E0%B8%9A
+                %E0%B8%B8%E0%B8%A3%E0%B8%B5+11000/@13.8481725,100.4414483,17z/data=!3m1!4b1!4m5!3m4!1s0x30e29a9e9439
+                6313:0xd6dba0913c8beab2!8m2!3d13.8481725!4d100.443637" id="location"><p class="txt"> &#x1F4CC;98 10 โยธาธิการ นนทบุรี 2025 ตำบล บางกร่าง อำเภอเมืองนนทบุรี นนทบุรี 11000</p></a>
             </div>
         </div>
-        <h1 id="detail-header">Find more details</h1>
-        <div id="detail" class="container"></div>
-        <h1 id="schoolweb-header">Go to Official website</h1>
-        <div id="schoolweb" class="container"></div>
+        <h1 id="detail-header" class="header">Find more details</h1>
+        <div id="detail" class="container">
+            <div class="img">
+                <img src="src/side.jpg" alt="image" class="side-img">
+            </div> 
+            <div class="article">
+                <h1 class="title" style="margin-top: 5%;">ประวัติความเป็นมา</h1>
+                <p class="txt">โรงเรียนเตรียมอุดมศึกษาพัฒนาการ นนทบุรี เดิมชื่อ โรงเรียนบางใหญ่ เริ่มก่อตั้งเมื่อวันที่ ๘ เมษายน พ.ศ. ๒๕๐๒ 
+                    ที่วัดพิกุลเงิน ตำบลบางม่วง อำเภอบางใหญ่ จังหวัดนนทบุรี โดยความคิดริเริ่มของว่าที่ร้อยตรีสวัสดิ์ ดวงจันทร์ ศึกษาธิการอำเภอบางใหญ่ขณะนั้น
+                     เปิดสอนครั้งแรก ชั้นมัธยมศึกษาปีที่ ๑ ใช้หอพระปริยัติธรรมของวัดพิกุลเงินเป็นสถานที่เรียนชั่วคราว ต่อมาได้ขยายชั้นเรียนเพิ่มเติมจนถึงชั้นมัธยมปีที่
+                      ๓ ในปี พ.ศ. ๒๕๐๔ ทางราชการได้ให้งบประมาณสร้างอาคารเรียนชั่วคราว ๑ หลัง ๖ ห้องเรียน แต่ได้รับงบประมาณไม่ครบ ทางวัดพิกุลเงิน 
+                      และชาวอำเภอบางใหญ่จึงได้ร่วมใจกันบริจาคสมทบอีก ๕๐,๐๐๐ บาท ใน พ.ศ. ๒๕๑๒ โรงเรียนได้เข้าโครงการปรับปรุงโรงเรียนมัธยมชนบท 
+                      (ค.ม.ช) รุ่นที่ ๖ ต่อจากนั้น ได้รับงบประมาณสร้าง โรงอาหาร หอประชุม และบ้านพักครู เมื่อจำนวนห้องเรียนเพิ่มขึ้นเรื่อย ๆ จนถึง ๑๐ ห้องเรียน 
+                      ทำให้อาคารเรียนไม่เพียงพอประกอบกับที่ดินไม่สามารถขยายได้ ดังนั้น นายบูรณะ โตจำเริญ ศึกษาธิการอำเภอบางใหญ่ และนายชุมพล คำดา ครูใหญ่ในขณะนั้น 
+                      จึงได้ติดต่อขอใช้ที่ดินบริเวณวัดโบสถ์ดอนพรหม ซึ่งได้มี พระราชปรีชามุนี (พร ปวโร) เจ้าคณะจังหวัดนนทบุรี ในขณะนั้นเป็นผู้ดูแลโรงเรียนได้รับความอนุเคราะห์จากท่านเจ้าอาวาส 
+                      กรรมการวัด และประชาชน เป็นอย่างดี</p>
+            </div>
+        </div>
+        <h1 id="schoolweb-header" class="header">Go to Official website</h1>
+        <div id="schoolweb" class="container">
+            <a href="https://tpn.ac.th/">คลิกที่นี่เพื่อไปยังหน้าเว็บทางการของ โรงเรียนเตรียมอุดมศึกษาพัฒนาการ นนทบุรี </a>
+        </div>
     </section>
 
     <footer>
