--- a/TPN.html
+++ b/TPN.html
@@ -13,6 +13,7 @@
             <a href="#about-header" class="navbtn">About our school</a>
             <a href="#detail-header" class="navbtn">More information</a>
             <a href="#schoolweb-header" class="navbtn">Official website</a>
+            <a href="Index.html" class="navbtn">Back to Home</a>
         </div>
     </nav>
     <section>
