--- a/T.D.W.html
+++ b/T.D.W.html
@@ -7,7 +7,7 @@
     <title>Debsirin</title>
     <link rel="stylesheet" href="Debsirin.css">
 </head>
-<body>
+<body class="bcolor">
     
     <nav>
         <div class="navbar">
@@ -15,16 +15,17 @@
             <a href="#b2" class="navbtn" >More information</a>
             <a href="#b3" class="navbtn" >Official website</a>
             <a href="Index.html" class="navbtn" >Back to Home</a>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Logo_Debsirin.png" width="50" lenght="50" class="imgunborder">
         </div>
     </nav>
 
     <section>
         <br><br><br><br><h1 id="b1">About our School</h1>
         <div id="about" class="container"><p class="con-text">Debsirin School<br>Motto: "หัวโต ใจกว้าง ร่างสมารท มารยาทงาม"<br>Address: 1466 Krung Kasem Rd, Wat Thepsirin, Pom Prap Sattru Phai, Bangkok 10100<br>It's the best school in the land!<br><a href="https://www.google.com/maps/dir//Debsirin+School,+1466+Krung+Kasem+Rd,+Wat+Thepsirin,+Pom+Prap+Sattru+Phai,+Bangkok+10100/@13.7806041,100.3949432,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x30e2993a5d69e539:0xdb1c9589472aec71!2m2!1d100.5159829!2d13.7472912">Location on google maps</a><br>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Logo_Debsirin.png" width="500" lenght="500">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Logo_Debsirin.png" width="500" lenght="500" class="imgunborder">
         
         </p>
-        <div id="img"><img src="https://live.staticflickr.com/7256/13423623854_0ec6cfa547_b.jpg" id="my-img" alt="image" ></div></div>
+        <div id="img"><img src="https://live.staticflickr.com/7256/13423623854_0ec6cfa547_b.jpg" id="my-img" alt="image" class="imgunborder" ></div></div>
         <h1 id="b2">Other Details</h1><br><br><br><br>
         <div id="detail" class="container"><p class="con-text">Debsirin School is an all boys school near Hua Lampong Train Station. Debsirin school offers 4 types of cirliculum which are SMTE EP IEP and normal classes. Each class offer deifferent types of education. With EP offering classes in English and SMTE offering classes mainly focusing on science and mathamethics. IEP is a semi english Program offering less English Classes than EP program. <br> Debsirin School is known for football. Wether if it is the big football field, the football club, football competitions, Debsirin is known for it all. <br> Fun Fact! Did you know that Rama 8 used to study at our school!?
             <br><img src="https://pbs.twimg.com/media/FJB8LpiaIAEtjTD?format=jpg&name=4096x4096" width="600" lenght="400">
